# candor-bench

./: README.md  pyproject.toml
candor_bench/: core.py
candor_bench/tasks/boolq/: boolq.py
candor_bench/tasks/race_h/: __init__.py  race_h.py  race_h_candor.py  race_h_dataset.py
experiments/: README.md  make_sample.py
experiments/race_h_candor/: analysis.py  run_sweep.py  utils.py
experiments/raceh_candor/: __init__.py  raceh_candor.py
